k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-deployment
  namespace: mcp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcp
  template:
    metadata:
      labels:
        app: mcp
    spec:
      automountServiceAccountToken: false
      containers:
      - name: mcp
        image: ghcr.io/fhswf/mcp:0.0.1
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mcp-service
  namespace: mcp
spec:
  selector:
    app: mcp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
